<resources>
    <string name="app_name">小日常</string>
    <string name="input_email_hint">请输入邮箱</string>
    <string name="input_password_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="separator">|</string>
    <string name="register">注册</string>
    <string name="today">今天</string>
    <string name="all">全部</string>
    <string name="mine">我的</string>
    <string name="add">+</string>
    <string name="input_goal_name">给目标命名</string>
    <string name="select_goal_type">挑选目标类型</string>
    <string name="input_inspiration">写一句激励自己的话</string>
    <string name="start_date">开始时间</string>
    <string name="end_date">结束时间</string>
    <string name="repeat">重复</string>

    <string name="health">健康</string>
    <string name="study">学习</string>
    <string name="work">工作</string>
    <string name="daily">日常</string>
    <string name="others">其他</string>
    <string name="my_goal">我的目标</string>
    <string name="new_goal">新建目标</string>
    <string name="finish">完成</string>

    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>

    <string name="logout">注销</string>
    <string name="delete">删除</string>

</resources>
