<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:alpha="0.6"
        android:background="@android:color/darker_gray" />

    <RadioGroup
        android:id="@+id/button_lists"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@android:color/white" >
        <RadioButton
            android:id="@+id/tab_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:textColor="@color/tab_textcolor_selector"
            style="@style/RadioGroupButtonStyle" />

        <RadioButton
            android:id="@+id/tab_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textColor="@color/tab_textcolor_selector"
            style="@style/RadioGroupButtonStyle" />

        <RadioButton
            android:id="@+id/tab_mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine"
            android:textColor="@color/tab_textcolor_selector"
            style="@style/RadioGroupButtonStyle" />
    </RadioGroup>
</LinearLayout>